--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,7 +1,9 @@
 .layout{
     width: 100%;
+    height: 100vh;
     display: flex;
     align-items: start;
+    position: relative;
     .content{
         width: 100%;
         background: #F1F1F1;
