--- a/src/main.scss
+++ b/src/main.scss
@@ -112,27 +112,25 @@ $mainBg: #F1F1F1;
 .container{
     width: 100%;
     max-width: 1300px;
-    
-    padding: 0 20px;
-
+    padding: 20px 0px 20px 20px;
+    border: 1px solid black;
     @include xxxxl{
         max-width: 1300px;
         // margin: 0 auto;
     }
     @include xxxl{
         max-width: 1120px;
-        background: red;
     }
     @include xxl{
         max-width: 940px;
-        background-color: yellow;
     }
     @include xl{
         max-width: 752px;
-        background: blue;
+        padding: 10px 0px 10px 10px;
     }
     @include lg{
         max-width: $md;
+        padding: 10px;
         margin: 0 auto;
     }
     @include md{
