--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -6,7 +6,8 @@
     position: relative;
     .content{
         width: 100%;
+        height: 100%;
         background: #F1F1F1;
-
+        overflow-y: auto;
     }
 }
