--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -15,6 +15,7 @@ header{
     position: sticky;
     top: 0;
     left: 0;
+    z-index: 8;
     @media (max-width:$lg) {
         height: 88px;
     }
