--- a/src/pages/admin/home/components/charts/charts.scss
+++ b/src/pages/admin/home/components/charts/charts.scss
@@ -12,7 +12,7 @@ $xxxxl:1921px;
     >.title{
         font-size: 36px;
         font-weight: 700;
-        line-height: 44px;
+        line-height: 120%;
         @media (max-width:$xl) {
             font-size: 32px;
             text-align: center;
