--- a/src/components/buttons/button/button.scss
+++ b/src/components/buttons/button/button.scss
@@ -17,6 +17,9 @@ $xxxxl:1921px;
     display: flex;
     align-items: center;
     white-space: nowrap;
+    &:hover{
+        opacity: .8;
+    }
     @media (max-width:$xxl) {
         padding: 10px 20px;
     }
@@ -25,6 +28,9 @@ $xxxxl:1921px;
     }
     @media (max-width:$md) {
         padding: 6px 16px;
+    }
+    @media (max-width:$sm) {
+        font-size: 12px;
     }
     img{
         margin-left: 10px;
