--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -19,7 +19,7 @@ header{
     @media (max-width:$lg) {
         height: 88px;
     }
-    .wrapper{
+    .header-wrapper{
         width: 100%;
         height: 100%;
         display: flex;
@@ -156,23 +156,30 @@ header{
                     height: 30px;
                 }
             }
-            button{
+            .languages{
                 font-size: 14px;
                 font-weight: 600;
                 line-height: 18px;
                 text-align: center;
                 border-radius: 8px;
-                background: #F9C70B;
-                padding: 16px 24px;
+                padding: 12px 26px;
                 color: #FFFFFF;
+                display: flex;
+                align-items: center;
+                white-space: nowrap;
+                background: #F9C70B;
+                cursor: pointer;
                 @media (max-width:$xxl) {
-                    padding: 12px 20px;
+                    padding: 10px 20px;
                 }
                 @media (max-width:$xl) {
-                    padding: 10px 18px;
+                    padding: 8px 18px;
                 }
                 @media (max-width:$md) {
-                    padding: 8px 16px;
+                    padding: 6px 16px;
+                }
+                &:focus{
+                    outline: none;
                 }
             }
         }
