--- a/src/main.scss
+++ b/src/main.scss
@@ -141,4 +141,24 @@ $mainBg: #F1F1F1;
     }
     
 }
-
+.title{
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 44px;
+    color: black;
+    margin-bottom: 15px;
+    @media (max-width:$xl) {
+        font-size: 32px;
+    }
+    @media (max-width:$sm) {
+        font-size: 28px;
+    }
+}
+.charts{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 15px;
+    margin-top: 20px;
+    width: 100%;     
+}
