--- a/src/pages/admin/product/components/tables/historyOfProducts/historyOfProducts.scss
+++ b/src/pages/admin/product/components/tables/historyOfProducts/historyOfProducts.scss
@@ -6,7 +6,7 @@ $xxl: 1401px;
 $xxxl:1601px;
 $xxxxl:1921px;
 
-input{
+.product-search__input{
     padding: 5px;
     border: none;
     border-bottom: 2px solid rgba(143, 144, 148, 1);
