feat: subscriber page corrected responsiveness

--- a/src/pages/admin/moneyCirculation/components/financialInfo/financialInfo.scss
+++ b/src/pages/admin/moneyCirculation/components/financialInfo/financialInfo.scss
@@ -1,7 +1,4 @@
-.financial-info__wrapper{
+.financial-info__title{
+    text-align: center;
     margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
 }
