--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -124,6 +124,7 @@ header{
                 border-radius: 100%;
                 padding: 10px;
                 background: #F4BE37;
+                cursor: pointer;
                 @media (max-width:$xxl) {
                     width: 50px;
                     height: 50px;
@@ -143,6 +144,7 @@ header{
                 height: 55px;
                 border-radius: 100%;
                 overflow: hidden;
+                cursor: pointer;
                 @media (max-width:$xxl) {
                     width: 50px;
                     height: 50px;
