--- a/src/pages/customer/home/components/cards/cards.scss
+++ b/src/pages/customer/home/components/cards/cards.scss
@@ -16,5 +16,41 @@ $xxxxl:1921px;
             justify-content: space-around;
             gap: 20px;
         }
+        .bonus-card{
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+        width: 300px;
+        height: 120px;
+        background: #F9C70B;
+        cursor: pointer;
+        border-radius: 20px;
+        @media (max-width:$xxxl) {
+            width: 260px;
+            height: 110px;
+        }
+        @media (max-width:$xxl) {
+            width: 220px;
+            height: 100px;
+                
+        }
+        @media (max-width:$xl) {
+            width: 250px;
+            height: 100px;
+        }
+        @media (max-width:$sm) {
+            width: 100%
+        }
+
+        &__title{
+            font-size: 27px;
+            font-weight: 500;
+            line-height: 120%;
+            @media (max-width:$xxl) {
+                font-size: 23px;
+            }
+        }
+    }
         
     }
