--- a/src/components/cards/emplyeeSmallCard/employeeSmallCard.scss
+++ b/src/components/cards/emplyeeSmallCard/employeeSmallCard.scss
@@ -14,11 +14,11 @@ $xxxxl:1921px;
     padding: 20px;
     @media (max-width:$xxxl) {
         width: 320px;
-        height: 200px;
+        height: 180px;
     }
     @media (max-width:$xxl) {
         width: 280px;
-        height: 180px;
+        height: 160px;
         padding: 16px;
     }
     @media (max-width:$md) {
@@ -63,28 +63,17 @@ $xxxxl:1921px;
         display: flex;
         align-items: center;
         flex-direction: column;
+        justify-content: center;
         margin-top: 20px;
-        gap: 10px;
-        .ball{
-            font-size: 38px;
-            font-weight: 600;
-            line-height: 120%;
-            @media (max-width:$xxxl) {
-                font-size: 34px;
-            }
-            @media (max-width:$xxl) {
-                font-size: 30px;
-            }
-            @media (max-width:$xl) {
-                font-size: 28px;
-            }
-        }
         .phone{
             display: flex;
+            align-items: center;
+            margin-top: 20px;
             p{
                 font-size: 18px;
                 font-weight: 600;
                 line-height: 120%;
+                
                 @media (max-width:$xxl) {
                     font-size: 15px;
                 }
