--- a/src/pages/customer/products/pages/products/customersProducts.scss
+++ b/src/pages/customer/products/pages/products/customersProducts.scss
@@ -1,8 +1,19 @@
+$sm: 578px;
+$md: 769px;
+$lg: 993px;
+$xl: 1201px;
+$xxl: 1401px;  
+$xxxl:1601px;
+$xxxxl:1921px;
+
 .users-products__categories{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     gap: 20px;
+    @media (max-width:$sm) {
+        gap: 10px;
+    }
     &>p{
         font-size: 14px;
         font-weight: 500;
@@ -11,5 +22,9 @@
         padding: 15px 24px;
         border-radius: 8px;
         cursor: pointer;
+        @media (max-width:$sm) {
+            font-size: 12px;
+            padding: 10px 18px;
+        }
     }
 }
