--- a/src/components/tables/whiteRowTable/table2.scss
+++ b/src/components/tables/whiteRowTable/table2.scss
@@ -64,7 +64,7 @@ $xxxxl:1921px;
 
         }
         td:first-child {
-            border-left-style: solid;
+            // border-left-style: solid;
             border-top-left-radius: 10px; 
             border-bottom-left-radius: 10px;
             @media (max-width:$xl) {
@@ -73,7 +73,7 @@ $xxxxl:1921px;
             }
         }
         td:last-child {
-            border-right-style: solid;
+            // border-right-style: solid;
             border-bottom-right-radius: 10px; 
             border-top-right-radius: 10px; 
             @media (max-width:$xl) {
