--- a/src/pages/authPages/signUp/signUp.scss
+++ b/src/pages/authPages/signUp/signUp.scss
@@ -143,6 +143,7 @@ $xxxxl:1921px;
             display: flex;
             align-items: center;
             justify-content: end;
+            margin-top: 20px;
         }
         .registration-fields{
             display: flex;
