--- a/src/main.scss
+++ b/src/main.scss
@@ -138,7 +138,7 @@ $mainBg: #F1F1F1;
     width: 100%;
     max-width: 1300px;
     padding: 20px 0px 20px 20px;
-    border: 1px solid black;
+    // border: 1px solid black;
     @include xxxxl{
         max-width: 1300px;
         // margin: 0 auto;
