--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -13,6 +13,7 @@
         padding: 20px;
         background: white;
         border-radius: 30px;
+        animation: bubble .5s;
         .Icon_wrapper{
             display: flex;
             align-items: center;
@@ -33,5 +34,19 @@
             //     width: 20px;
             // }
         }
+    }
+}
+@keyframes bubble {
+    0%{
+        transform: scale(0);
+    }
+    50%{
+        transform: scale(1.2);
+    }
+    75%{
+        transform: scale(.7);
+    }
+    100%{
+        transform: scale(1);
     }
 }
