--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -24,6 +24,7 @@
                 height: 30px;
                 background: #000000;
                 border-radius: 10px;
+                cursor: pointer;
                 img{
                     width: 100%;
                     height: 100%;
