some functions added

--- a/src/components/cards/subscriptionsCard/subscriptionCard.scss
+++ b/src/components/cards/subscriptionsCard/subscriptionCard.scss
@@ -5,7 +5,10 @@
     border-radius: 9px;
     padding: 20px;
     cursor: pointer;
-
+    transition: .3S;
+    &:hover{
+        box-shadow: 0px 2px 6px gray;
+    }
     &>div{
         display: flex;
         align-items: center;
