--- a/src/pages/customer/profile/components/subscriberInfoForm/subscriberInfoForm.scss
+++ b/src/pages/customer/profile/components/subscriberInfoForm/subscriberInfoForm.scss
@@ -187,6 +187,7 @@ $xxxxl:1921px;
                     gap: 5px;
                     .passport_series{
                         width: 50px;
+                        text-transform: uppercase;
                     }
                     .passport_num{
                         width: 180px;
