--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -125,6 +125,10 @@ header{
                 padding: 10px;
                 background: #F4BE37;
                 cursor: pointer;
+                transition: .3s;
+                &:hover{
+                    box-shadow: 0px 1px 3px gray;
+                }
                 @media (max-width:$xxl) {
                     width: 50px;
                     height: 50px;
@@ -145,6 +149,10 @@ header{
                 border-radius: 100%;
                 overflow: hidden;
                 cursor: pointer;
+                transition: .3s;
+                &:hover{
+                    box-shadow: 0px 1px 3px gray;
+                }
                 @media (max-width:$xxl) {
                     width: 50px;
                     height: 50px;
