--- a/src/pages/authPages/signUp/signUp.scss
+++ b/src/pages/authPages/signUp/signUp.scss
@@ -155,6 +155,7 @@ $xxxxl:1921px;
                     gap: 5px;
                     .reg__passport-series{
                         width: 50px;
+                        text-transform: uppercase;
                     }
                     .reg__passport-num{
                         width: 180px;
