--- a/src/pages/customer/products/pages/products/customersProducts.scss
+++ b/src/pages/customer/products/pages/products/customersProducts.scss
@@ -14,7 +14,7 @@ $xxxxl:1921px;
     @media (max-width:$sm) {
         gap: 10px;
     }
-    &>p{
+    & p{
         font-size: 14px;
         font-weight: 500;
         line-height: 120%;
