--- a/src/components/fields/dropZone/dropZone.scss
+++ b/src/components/fields/dropZone/dropZone.scss
@@ -1,3 +1,11 @@
+$sm: 578px;
+$md: 769px;
+$lg: 993px;
+$xl: 1201px;
+$xxl: 1401px;  
+$xxxl:1601px;
+$xxxxl:1921px;
+
 .drop-zone__wrapper{
     width: 100%;
     height: 200px;
@@ -6,4 +14,15 @@
     justify-content: center;
     border: 1px solid black;
     border-radius: 20px;
+    
 }
+.dropzone-image{
+        width: 40%;
+        margin: 20px auto;
+        @media (max-width:$xxxl) {
+            width: 50%;
+        }
+        @media (max-width:$sm) {
+            width: 100%;
+        }
+    }
