--- a/src/components/buttons/button/button.scss
+++ b/src/components/buttons/button/button.scss
@@ -14,6 +14,7 @@ $xxxxl:1921px;
     border-radius: 8px;
     padding: 12px 26px;
     color: #FFFFFF;
+    text-align: center;
     display: flex;
     align-items: center;
     white-space: nowrap;
