admin-notifications added

--- a/src/pages/admin/subscriptions/pages/createTariff/createTariff.scss
+++ b/src/pages/admin/subscriptions/pages/createTariff/createTariff.scss
@@ -10,6 +10,7 @@ $xxxxl:1921px;
 .tariff__arrow-circle-left{
     width: 72px;
     cursor: pointer;
+    margin-top: 10px;
     @media (max-width:$xxl) {
         width: 55px;
     }
